# FINAL-YEAR-PROJECT

./: .env  .gitignore  BACKEND_RUNNING.md  DEVELOPMENT_SETUP.md  QUICK_START.md  README.md  RUN_BACKEND.sh  RUN_FRONTEND.sh  SETUP_COMPLETE.md  START_HERE.md  docker-compose.yml
app-assankheti-backend/: .dockerignore  .gitignore  DockerfileBackend  README.md  pyproject.toml  requirements.txt
app-assankheti-backend/src/app/: __init__.py  main.py
app-assankheti-backend/src/app/api/v1/: __init__.py
app-assankheti-backend/src/app/api/v1/endpoints/: __init__.py  (+9 more)
app-assankheti-backend/src/app/data/: quantities.py
app-assankheti-backend/src/app/db/: __init__.py  db_connection.py
app-assankheti-backend/src/app/models/: __init__.py  collections.py
app-assankheti-backend/src/app/schemas/: __init__.py  auth.py  auth_credentials.py  character.py  crop_selections.py  deviceSettings.py  fertilizer.py  id_Mobile.py  languageVoice.py  pesticide.py  product.py  seed.py  terms.py
app-assankheti-backend/src/app/services/: __init__.py  fertilizer_service.py  pesticide_service.py  predictor.py  security.py  seed_service.py  stytch_client.py
app-assankheti-backend/src/app/services/calculator/: budget_logic.py  fertilizer_logic.py  irrigation_logic.py  pesticide_logic.py
app-assankheti-backend/src/app/services/pricing/: price_service.py
app-assankheti-backend/src/app/services/scraper/: crop_price_scraper.py  fertilizer_scraper.py  pesticide_scraper.py  seed_scraper.py
app-assankheti-backend/src/app/utils/: logger.py
app-assankheti-backend/tests/: test_chatbot.py
(+70 files in other folders)
