[tool.poetry]
name = "assan-kheti-backend"
version = "0.1.0"
description = "A FastAPI backend for managing agricultural data with MongoDB."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
pymongo = "^4.6.0"
motor = "^3.3.0"
python-dotenv = "^1.0.0"
pyjwt = "^2.8.0"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
python-multipart = "^0.0.6"
email-validator = "^2.1.0"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"